--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.11"
 pytest = "^7.2.0"
 scrapy = "^2.7.1"
 pytest-timeout = "^2.1.0"
+tabulate = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
@@ -19,6 +20,7 @@ isort = "^5.11.4"
 flake8 = "^6.0.0"
 mypy = "^0.991"
 flake8-assert-msg = "^1.1.1"
+types-tabulate = "^0.9.0.0"
 
 [build-system]
 requires = ["poetry-core"]
